<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/searchWO" />
        <item
            android:id="@+id/nav_edit"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/createWO" />
        <item
            android:id="@+id/nav_help"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/contact_title" />

    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_signout"
                android:icon="@android:drawable/ic_menu_close_clear_cancel"
                android:title="@string/signout" />
        </menu>
    </item>
</menu>
