<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.clearavenue.jbsaworkorder.Contact">

    <ImageView
        android:layout_width="198dp"
        android:layout_height="240dp"
        android:id="@+id/imageView2"
        android:src="@drawable/jbsa_logo"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/image_description"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_call"
        android:id="@+id/textView"
        android:layout_marginTop="54dp"
        android:layout_below="@+id/textView5"
        android:layout_alignStart="@+id/textView5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_email"
        android:id="@+id/textView2"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="phone"
        android:text="@string/contact_call_number"
        android:id="@+id/textView3"
        android:layout_alignTop="@+id/textView"
        android:layout_alignEnd="@+id/textView5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="email"
        android:text="@string/contact_email_address"
        android:id="@+id/textView4"
        android:layout_alignTop="@+id/textView2"
        android:layout_alignStart="@+id/textView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/contact_title"
        android:id="@+id/textView5"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        tools:ignore="RelativeOverlap" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_button"
        android:id="@+id/homeButtonContact"
        android:onClick="onClick"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="34dp"
        android:background="@drawable/button"/>

</RelativeLayout>
