<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.clearavenue.jbsaworkorder.forgotID">

   <ImageView
        android:layout_width="198dp"
        android:layout_height="240dp"
        android:id="@+id/imageView"
        android:src="@drawable/jbsa_logo"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/description_image"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/reset_paragraph"
        android:id="@+id/instructionsParagraph"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailField"
        android:hint="@string/hint_email"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/instructionsParagraph"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_submit"
        android:id="@+id/submitButton"
        android:background="@drawable/button"
        android:onClick="onClick"
        android:layout_below="@+id/emailField"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hyperlink_contact_support"
        android:id="@+id/contactSupport"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="onClick"
        android:textColor="#0000EE" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30px"
        android:layout_toEndOf="@+id/contactSupport"
        android:layout_below="@+id/submitButton"
        android:layout_alignParentStart="true"
        android:id="@+id/space2" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_button"
        android:id="@+id/homeButton"
        android:background="@drawable/button"
        android:onClick="onClick"
        android:layout_below="@+id/space2"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
