<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.clearavenue.jbsaworkorder.Success">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/success_title"
            android:id="@+id/successTitle"
            android:textStyle="bold"
            android:textSize="50sp"
            android:textAlignment="center" />


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imageView4"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/success_image"
            android:layout_weight="0.33" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/success_sentence"
            android:id="@+id/success_sentence" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:weightSum="1">

            <Button
                android:layout_width="100dp"
                android:layout_height="58dp"
                android:text="@string/back_button"
                android:id="@+id/back_button"
                android:background="@drawable/button"
                android:layout_weight="0.19"
                android:onClick="onClick"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.55" />

            <Button
                android:layout_width="100dp"
                android:layout_height="58dp"
                android:text="@string/home_button"
                android:id="@+id/home_button"
                android:background="@drawable/button"
                android:layout_weight="0.22"
                android:onClick="onClick"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
