<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.clearavenue.jbsaworkorder.ListResults">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:weightSum="1"
                android:baselineAligned="false"
                android:id="@+id/linearLayout">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/base"
                        android:id="@+id/selectedBase"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/partner"
                        android:id="@+id/selectedPartner"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/location"
                        android:id="@+id/selectedLocation" />

                </LinearLayout>

                <Space
                    android:layout_width="fill_parent"
                    android:layout_height="20dp"
                    android:layout_weight="0.98" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="41dp"
                    android:id="@+id/imageView3"
                    android:src="@drawable/jbsa_logo" />

            </LinearLayout>

            <ListView
                android:layout_width="match_parent"
                android:layout_height="293dp"
                android:id="@+id/listView"
                android:choiceMode="singleChoice"
                android:listSelector="#fabebebe"
                android:layout_weight="0.67" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:weightSum="1"
                android:layout_weight="0.04">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back_button"
                    android:id="@+id/back_button_listresult"
                    android:background="@drawable/button"
                    android:layout_gravity="bottom"
                    android:onClick="onClick"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:layout_weight=".98" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/next_button"
                    android:id="@+id/next_button_listresult"
                    android:background="@drawable/button"
                    android:layout_gravity="bottom"
                    android:onClick="onClick"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
